name:                yesod-test-static
version:             0.1.0.0
synopsis:            Test for stale statics in yesod
description:         Please see README.md
homepage:            http://github.com/knupfer/yesod-test-static
license:             BSD3
license-file:        LICENSE
author:              Florian Knupfer
maintainer:          fknupfer@gmail.com
copyright:           2016 Florian Knupfer
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , text
  exposed-modules:     Yesod.Test.Static
